@@ -431,6 +431,8 @@ Release 0.22.0 - Unreleased
     HDFS-1572. Checkpointer should trigger checkpoint with specified period.
     (jghoman)
 
+    HDFS-1561. BackupNode listens on the default host. (shv)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
